# simulans

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  build.rs
.cargo/: config.toml
debugger/: debugger.py  debugger.tcss  pyproject.toml
src/: aarch64.rs  cli.rs  cpu_state.rs  exceptions.rs  fdt.rs  gdb.rs  jit.rs  lib.rs  machine.rs  main.rs  memory.rs  tracing.rs
src/aarch64/: timer.rs
src/cpu_state/: exclusive_monitor.rs  memory.rs  pstate.rs  sysregs.rs
src/devices/: gicv2.rs  mod.rs  pl011.rs  pl031.rs  timer.rs  virtio_mmio.rs
src/exceptions/: syscalls.rs
src/interval_tree/: README.md  mod.rs  node.rs  tests.rs
src/jit/: arithmetic.rs  memory.rs  simd.rs  sysregs.rs
src/machine/: char_frontend.rs  debug_monitor.rs  entry_blocks.rs  interrupts.rs  psci.rs  tlb.rs  translation_blocks.rs
src/memory/: address.rs  map.rs  mmu.rs  region.rs  size.rs  tlb.rs
src/memory/mmu/: descriptors.rs
src/memory/region/: linux.rs  macos.rs
src/varlink/: com.github.epilys.simulans.varlink  com_github_epilys_simulans.rs  mod.rs
test_kernel/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
test_kernel/src/: exceptions.rs  logger.rs  main.rs
tests/: test_arithmetic.rs  test_branches.rs  test_conditions.rs  test_exceptions.rs  test_feat_cssc.rs  test_machine.rs  test_memory.rs  test_pl011.rs  test_simd.rs  test_small_functions.rs  test_timers.rs  utils.rs
tests/inputs/: helpers.S.inc  test_adds.S  test_b_cnd.S  test_bit_counts.S  test_bitfields.S  test_bitfields_2.S  test_bitfields_signed.S  test_cmp.S  test_cond.S  test_crc32.S  test_div.S  test_eret_to_el0.S  test_exception_levels.S  test_extract.S  test_generic_timer.S  test_load_stores.S  test_load_stores_2.S  test_mmu_4k.S  test_mmu_abort.S  test_mov.S  test_mul.S  test_overflow.S  test_pstate_pseudoregisters.S  test_pstate_spsel.S  test_sdiv.S  test_simd_mov.S  test_simd_rev.S  test_simple_if.S  test_simple_if_opt.S  test_square.S  test_write_str.S
xtask/: .gitignore  Cargo.toml  README.md
xtask/src/: main.rs
