[package]
name = "simulans"
version = "0.0.0"
authors = []
license = "EUPL-1.2 OR GPL-3.0-or-later"
description = ""
edition = "2021"

[dependencies]
bad64 = "0.9.0"
bilge = "0.2.0"
capstone = "0.13.0"
cranelift = "0.97.1"
cranelift-jit = "0.97.1"
cranelift-module = "0.97.1"
cranelift-native = "0.97.1"
indexmap = "2.7.1"
