[package]
name = "simulans"
version = "0.0.0"
authors = ["Manos Pitsidianakis <manos@pitsidianak.is>"]
license = "EUPL-1.2 OR GPL-3.0-or-later"
description = "Armv8-A emulation toolkit"
repository = "https://github.com/epilys/simulans"
keywords = ["arm", "aarch64", "arm64", "emulation", "emulator"]
categories = ["emulators", "virtualization", "command-line-utilities"]
edition = "2021"

[dependencies]
bad64 = "0.9.0"
bilge = "0.2.0"
bitflags = "2.6.0"
capstone = "0.13.0"
clap = { version = "4.5.31", features = ["derive"] }
cranelift = "0.97.1"
cranelift-jit = "0.97.1"
cranelift-module = "0.97.1"
cranelift-native = "0.97.1"
env_logger = { version = "0.11.6", default-features = false }
indexmap = { version = "2.7.1" }
log = { version = "0.4.26", default-features = false }
memmap2 = { version = "0.9.5" }
nix = { version = "0.29.0", features = ["mman", "fs"] }
num-traits = { version = "0.2.19" }
rustc-hash = "2.1.1"
vm-fdt = "0.3.0"

[features]
default = []
# Update program counter before executing an emulated instruction. The performance overhead of this has not been measured.
accurate-pc = []
