[package]
name = "simulans"
version = "0.0.0"
authors = ["Manos Pitsidianakis <manos@pitsidianak.is>"]
license = "EUPL-1.2 OR GPL-3.0-or-later"
description = "Armv8-A emulation toolkit"
repository = "https://github.com/epilys/simulans"
keywords = ["arm", "aarch64", "arm64", "emulation", "emulator"]
categories = ["emulators", "virtualization", "command-line-utilities"]
edition = "2021"

[dependencies]
bad64 = "0.9.0"
bilge = "0.2.0"
bitflags = "2.6.0"
capstone = "0.13.0"
clap = { version = "4.5.31", features = ["derive"] }
cranelift = "0.123.2"
cranelift-jit = "0.123.2"
cranelift-module = "0.123.2"
cranelift-native = "0.123.2"
gdbstub = { version = "0.7.1", optional = true }
gdbstub_arch = { version = "0.3.0", optional = true }
getrandom = "0.3.3"
indexmap = { version = "2.7.1" }
memmap2 = { version = "0.9.5" }
nix = { version = "0.30", features = ["mman", "fs"] }
num-traits = { version = "0.2.19" }
serde = "1"
serde_derive = "1"
serde_json = "1"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uluru = "3.1.0"
vm-fdt = "0.3.0"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }

[features]
default = ["accurate-pc", "gdbstub"]
# Update program counter before executing an emulated instruction. The performance overhead of this has not been measured.
accurate-pc = []
# Add support for running a guest under a gdbstub server listening on a Unix socket. See output of `--help` for how to use.
gdbstub = ["dep:gdbstub", "dep:gdbstub_arch"]
