[package]
name = "test-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
buddy_system_allocator = "0.10.0"
flat_device_tree = "3.1.1"
log = "0.4.22"
pl011-uart = "0.1.0"
smccc = "0.1.1"
spin = "0.9.8"

[build-dependencies]
cc = "1.0.73"
bindgen = "0.71.0"

[[bin]]
name = "test_kernel"
path = "src/main.rs"
