[package]
name = "test-kernel"
version = "0.1.0"
authors = ["Manos Pitsidianakis <manos@pitsidianak.is>"]
license = "EUPL-1.2 OR GPL-3.0-or-later"
description = "Hello world bare-metal aarch64 unikernel"
edition = "2021"
publish = false

[dependencies]
buddy_system_allocator = "0.10.0"
flat_device_tree = "3.1.1"
log = "0.4.22"
pl011-uart = "0.1.0"
smccc = "0.1.1"
spin = "0.9.8"

[build-dependencies]
bindgen = "0.71.0"
cc = "1.0.73"

[[bin]]
name = "test_kernel"
path = "src/main.rs"

[profile.release]
strip = "none"
debug = "full"
